--- a/DevIo.Api/DevIo.Api.csproj
+++ b/DevIo.Api/DevIo.Api.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\DevIo.Infra\DevIo.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
