--- a/DevIo.Api/DevIo.Api.csproj
+++ b/DevIo.Api/DevIo.Api.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\DevIo.Infra\DevIo.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dtos\Response\" />
+  </ItemGroup>
+
 </Project>
